--- a/app.html
+++ b/app.html
@@ -9,7 +9,7 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <p> hola caracola o cara culo 
+    <p> buuuuuuuuu
     </p>
 </body>
 </html>
